--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,12 +1,12 @@
 ---
-import "../../src/styles/globals.css";
-import Header from "../components/Header.astro";
+import "../../src/styles/globals.css"
+import Header from "../components/Header.astro"
 
 interface Props {
-  title: string;
+  title: string
 }
 
-const { title } = Astro.props;
+const { title } = Astro.props
 ---
 
 <!doctype html>
@@ -19,7 +19,7 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
   <body class="bg-[#355C7D] font-sans text-white antialiased">
-    <div class="bg-grid-pattern flex min-h-screen flex-col px-6 sm:px-12">
+    <div class="flex min-h-screen flex-col bg-grid-pattern px-6 sm:px-12">
       <div class="mx-auto flex w-full max-w-5xl grow flex-col">
         <Header />
         <main class="grow">
