--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,9 +4,10 @@ import Header from "../components/Header.astro"
 
 interface Props {
   title: string
+  description: string
 }
 
-const { title } = Astro.props
+const { title, description } = Astro.props
 ---
 
 <!doctype html>
@@ -14,13 +15,14 @@ const { title } = Astro.props
   <head>
     <meta charset="UTF-8" />
     <title>{title}</title>
+    <meta name="description" content={description} />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content="{Astro.generator}" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
-  <body class="bg-[#355C7D] font-sans text-white antialiased">
+  <body class="bg-primary font-sans text-white antialiased">
     <div class="flex min-h-screen flex-col bg-grid-pattern px-6 sm:px-12">
-      <div class="mx-auto flex w-full max-w-5xl grow flex-col">
+      <div class="mx-auto flex w-full max-w-7xl grow flex-col">
         <Header />
         <main class="grow">
           <slot />
