make main image responsive

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 <div class="navbar mb-5 bg-transparent px-0 py-5 sm:mb-8">
   <div class="navbar-start">
-    <a href="/" class="inline-block w-24">
+    <a href="/archive" class="inline-block w-24">
       <img src="/logo.svg" alt="Zb1" class="h-full w-full object-contain" />
     </a>
   </div>
