make loading for main hero image eager

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,6 +18,7 @@ import zb1Image from "../assets/zb1-good-so-bad-promo.jpeg"
         alt="Zerobaseone wearing outfit inspired by outer space with a satelite and planets on the back"
         widths={[364, 500]}
         sizes={`(max-width: 640px) 364px, 500px`}
+        loading="eager"
       />
     </figure>
     <div>
